Run flutter test with coverage on CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - prepare
       - run:
           name: Run tests
-          command: flutter test
+          command: flutter test --coverage
       - codecov/upload
 
   analyze:
