--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 
 dependencies:
   flutter_i18n: ^0.19.1
+  flutter_redux: ^0.6.0
+  redux_epics: ^0.14.0
   flutter:
     sdk: flutter
 
