--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,3 +23,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/i18n/en.json
+    - assets/icons/spotify-black.png
+    - assets/icons/spotify-white.png
